debbugs (2.4.2~exp1) experimental; urgency=low

  * Allow (almost) exactly what RFC2822 allows in comments (closes:
    #497144)
  * Fix problem with non-existant /etc/debbugs/config
  * Ditch \r and \n in status fields (closes: #545895)
  * Properly handle source packages when searching by maintainer; use
    package_maintainer instead of the hashes (closes: #556863)

 -- Don Armstrong <don@debian.org>  Wed, 26 Aug 2009 21:32:53 -0700

debbugs (2.4.2~exp0) experimental; urgency=low

  [ Anthony Towns ]
  * Add "package" command to service (control@) to limit the bugs that
    the following commands apply to.

  [ Colin Watson ]
  * Add (slightly) fancy CGI decoding of message/* MIME types.
  * CGI scripts now support multiple maintainers for a single package.
  * Add support for an X-Debbugs-No-Ack: mail header to suppress
    acknowledgements.
  * Document how to deliver mail to debbugs via procmail and SpamAssassin.
  * Implement new .status format that's extensible and easier to read; it
    now lives in .summary rather than .status. Use debbugs-upgradestatus
    to convert existing bug databases.
  * Implement bug ownership, with new 'owner' and 'noowner' commands and
    Owner: pseudo-header (closes: #133453).
  * Install Debian configuration in the binary package's examples
    directory (closes: #222118).
  * New standalone SpamAssassin queue runner, spamscan.
  * Allow # prefix on bug numbers in 'merge' command.
  * Fix some ordering issues in old-style package pages and summaries.
  * Add X-$gProject-PR-Message: headers to all mails sent by service.
  * debbugsconfig creates required directories in $gSpoolDir
    (closes: #222077).
  * Decode RFC1522 mail headers for display in the web interface.
    bugreport.cgi and pkgreport.cgi now output UTF-8.
  * Properly support multiple submitter addresses on a single bug.
  * Add a number of extra htmlsanit() calls to prevent cross-site
    scripting attacks.

  [ Adam Heath ]