@@ -6,6 +6,10 @@ debbugs (2.4.2~exp1) experimental; urgency=low
   * Ditch \r and \n in status fields (closes: #545895)
   * Properly handle source packages when searching by maintainer; use
     package_maintainer instead of the hashes (closes: #556863)
+  * Handle \r properly in Debbugs::MIME for PGP signatures
+    (closes: #565981). Thanks to Mike Hommey
+  * Allow type to be text as well as text/(something not html)
+    (closes: #566068). Thanks to Mike Hommey.
 
  -- Don Armstrong <don@debian.org>  Wed, 26 Aug 2009 21:32:53 -0700
 
